minor theme adjustments

--- a/WebMarks/views/invalidStudent.jade
+++ b/WebMarks/views/invalidStudent.jade
@@ -5,8 +5,9 @@ block headerScripts
 block content
 	div#page1(data-role='page')
 		div(data-theme='a',data-role='header')
-			h3 WebMarks 
-				div#header #{courseName}			
+			div(align="center")
+				h3 UCT Physics WebMarks 
+					div#header #{courseName}			
 		div(data-role='content')
 			a(class="ui-body ui-body-e", align="center")
 				|#{studentID}: Your student number was not found in the #{courseCode} database			
