--- a/WebMarks/views/marks.jade
+++ b/WebMarks/views/marks.jade
@@ -10,10 +10,11 @@ block headerScripts
 block content
 	div#page1(data-role='page')
 		div(data-theme='b',data-role='header')
-			h3 WebMarks 
-				div#header #{courseName}
+			div(align="center")
+				h3 UCT Physics WebMarks 
+					div#header #{courseName}
 		div(data-role='content')			
-			a(class="ui-body ui-body-e", data-theme='b',align="center")				
+			a(class="ui-body ui-body-d", data-theme='b',align="center")				
 				| #{studentName} (#{studentID})
 				p
 				| Updated on #{updateDate}
