minor theme adjustments

--- a/WebMarks/views/invalidCourse.jade
+++ b/WebMarks/views/invalidCourse.jade
@@ -2,7 +2,7 @@
 
 block content
 	div#page1(data-role='page')
-		div(data-theme='a',data-role='header')
+		div(data-theme='b',data-role='header')
 			h3 WebMarks 
 		div(data-role='content')
 			a#authError(class="ui-body ui-body-e", align="center")
