--- a/WebMarks/views/invalidStudent.jade
+++ b/WebMarks/views/invalidStudent.jade
@@ -4,7 +4,7 @@ block headerScripts
 	
 block content
 	div#page1(data-role='page')
-		div(data-theme='a',data-role='header')
+		div(data-theme='b',data-role='header')
 			div(align="center")
 				h3 UCT Physics WebMarks 
 					div#header #{courseName}			
