--- a/WebMarks/views/invalidCourse.jade
+++ b/WebMarks/views/invalidCourse.jade
@@ -6,4 +6,4 @@ block content
 			h3 WebMarks 
 		div(data-role='content')
 			a#authError(class="ui-body ui-body-e", align="center")
-				|The course does not have a WebMarks database, or the URL was invalde
+				|The course does not have a WebMarks database, or the URL was invalid
