--- a/WebMarks/views/randomNames.jade
+++ b/WebMarks/views/randomNames.jade
@@ -16,6 +16,6 @@ block content
 			h2(data-theme='b',data-role='header') #{headingText}
 			div 
 				ol(data-role="listview")			
-					- for (var i = 0; i < randomNames.length; i++) {				
-					li #{randomNames[i].studentID} (#{randomNames[i].name})
+					- for (var i = 0; i < names.length; i++) {				
+					li #{names[i].studentID} (#{names[i].name})
 					- }
