--- a/WebMarks/views/layout.jade
+++ b/WebMarks/views/layout.jade
@@ -5,6 +5,7 @@ html
 		link(rel='stylesheet', href='/webmarks/stylesheets/jquerymobile/jquery.mobile.theme-1.3.2.min.css')
 		link(rel='stylesheet', href='/webmarks/stylesheets/jquerymobile/jquery.mobile.structure-1.3.2.min.css')
 		link(rel='stylesheet', href='/webmarks/stylesheets/jquerymobile/jquery.mobile.flatui.min.css')
+		link(rel='stylesheet', href='/webmarks/stylesheets/additional.css')
 		script(src='/webmarks/javascripts/jquery/jquery-1.11.0.min.js')
 		script(src='/webmarks/javascripts/jquerymobile/jquery.mobile-1.3.2.min.js')
 		block headerScripts		
