updated jquery and highcharts

--- a/WebMarks/views/marks.jade
+++ b/WebMarks/views/marks.jade
@@ -4,8 +4,9 @@ block headerScripts
 	script.
 		var hists=!{hists}
 		var courseName="#{courseName}"
-	script(src='/webmarks/javascripts/highcharts/js/highcharts.js')
-	script(src='/webmarks/javascripts/client.js')
+	script(src='/javascripts/highcharts/js/highcharts.js')
+	script(src='/javascripts/highcharts/js/highcharts-more.js')
+	script(src='/javascripts/client.js')
 
 block content
 	div#page1(data-role='page')
