--- a/WebMarks/views/selectCourse.jade
+++ b/WebMarks/views/selectCourse.jade
@@ -2,7 +2,7 @@
 block bannerImage
 	div(align="center")
 		p
-		img(src="/webmarks/images/banner.jpg")
+		img(src="/images/banner.jpg")
 
 block headerScripts
 	script.
