initial bootstrap commit

--- a/WebMarks/views/errorDatabase.jade
+++ b/WebMarks/views/errorDatabase.jade
@@ -1,12 +1,20 @@
 ﻿extends layout
 
+block headerScripts
+
 block content
-	div#page1(data-role='page')
-		div(data-theme='b',data-role='header')
-			h3 WebMarks 
-		div(data-role='content')			
-			a(class="ui-body ui-body-e", align="center")
-				|There was a problem accessing the database. Please try later. If the problem persists, contact your course convenor
+	.navbar.navbar-inverse(role = 'navigation')
+		.container
+			.navbar-header
+				.navbar-brand
+					span.fui-document.pad10h
+					| UCT Physics Webmarks
+	.container
+		.row				
+			.col-xs-12
+				div(class='alert alert-info') 
+					span
+						|There was a problem accessing the database. Please try later. If the problem persists, contact your course convenor
 			div(data-role="collapsible",data-content-theme="e",align="center")				
 				h3 Error info
 				a(class="ui-body ui-body-e", align="center")
