--- a/WebMarks/views/invalidCourse.jade
+++ b/WebMarks/views/invalidCourse.jade
@@ -1,9 +1,17 @@
 ﻿extends layout
 
+block headerScripts
+
 block content
-	div#page1(data-role='page')
-		div(data-theme='b',data-role='header')
-			h3 WebMarks 
-		div(data-role='content')
-			a#authError(class="ui-body ui-body-e", align="center")
-				|The course does not have a WebMarks database, or the URL was invalid
+	.navbar.navbar-inverse(role = 'navigation')
+		.container
+			.navbar-header
+				.navbar-brand
+					span.fui-document.pad10h
+					| UCT Physics Webmarks
+	.container
+		.row				
+			.col-xs-12					
+				div(class='alert alert-info') 
+					span
+						|The course does not have a WebMarks database, or the URL was invalid
