--- a/WebMarks/views/layout.jade
+++ b/WebMarks/views/layout.jade
@@ -1,14 +1,15 @@
 doctype html
 html
 	head
-		title= "WebMarks"		
-		link(rel='stylesheet', href='/stylesheets/jquerymobile/jquery.mobile.theme-1.3.2.min.css')
-		link(rel='stylesheet', href='/stylesheets/jquerymobile/jquery.mobile.structure-1.3.2.min.css')
-		link(rel='stylesheet', href='/stylesheets/jquerymobile/jquery.mobile.flatui.min.css')
-		link(rel='stylesheet', href='/stylesheets/additional.css')
-		script(src='/javascripts/jquery/jquery-1.11.3.min.js')
-		script(src='/javascripts/jquerymobile/jquery.mobile-1.3.2.min.js')
+		title= "WebMarks"
+		link(rel='stylesheet', href='/bootstrap/css/bootstrap.min.css')		
+		link(rel='stylesheet', href='/flat-ui/css/modules_flat-ui.min.css')
+		link(rel='stylesheet', href='/bootstrap/css/additional.css')
+		link(rel='stylesheet', href='/flat-ui/css/extra.css')
+		script(src='/jquery/jquery-1.11.3.min.js')
+		script(src='/flat-ui/js/flat-ui.min.js')
+		script(src='/bootstrap/js/additional.js')
 		block headerScripts		
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-	body(class="ui-mobile-viewport ui-overlay-c")
+	body
 		block content
