--- a/WebMarks/views/marks.jade
+++ b/WebMarks/views/marks.jade
@@ -3,37 +3,63 @@ extends layout
 block headerScripts
 	script.
 		var hists=!{hists}
-		var courseName="#{courseName}"
-	script(src='/javascripts/highcharts/js/highcharts.js')
-	script(src='/javascripts/highcharts/js/highcharts-more.js')
-	script(src='/javascripts/client.js')
+		var courseName="#{courseName}"		
+	script(src='/highcharts/js/highcharts.js')
+	script(src='/highcharts/js/highcharts-more.js')
+	script(src='/client.js')
 
 block content
-	div#page1(data-role='page')
-		div(data-theme='b',data-role='header')
-			div(align="center")
-				h3 UCT Physics WebMarks 
-					div#header #{courseName}
-		div(data-role='content')
-			a(class="ui-body ui-body-b", data-theme='b',align="center")
-				| #{studentName} (#{studentID})
-				p
-				| Updated on #{updateDate}
-			div(data-role='collapsible-set', data-theme='b', data-content-theme='b',data-inset="false")
-				- for (var i = 0, j = 0; i < averages.length; i++) {
-				#resultCollapsible(data-role='collapsible', data-collapsed='true')
-					h3 
-						span#resultHeading
-							|#{cats[averages[i].typeID-1].categoryName}
-							- if (averages[i].average>=0)
-								| : #{averages[i].average} %
-							- else if (averages[i].average ==-2)
-								| : Exempt
-					ul(data-role="listview",data-content-theme='c',data-theme='c')
-						- for (;j<marks.length && averages[i].typeID==marks[j].typeID;j++){					
-						li
-							| #{marks[j].entryName}: 
-							| #{marks[j].mark} / #{marks[j].maxMarks}						
-						- }	
-				- }			
-			#chart_container(data-role='content')
+	.navbar.navbar-inverse(role = 'navigation')
+		.container
+			.navbar-header
+				.navbar-brand
+					span.fui-document.pad10h
+					|#{courseName}
+	.container
+		.alert.alert-default			
+			.row
+				.col-xs-12							
+					|#{studentName} (#{studentID})
+			.row				
+				.col-xs-12
+					span.label.label-info
+						| Updated on #{updateDate}
+		.row				
+			.col-xs-12
+				.panel-group#accordionMarks(role="tablist", aria-multiselectable="false")
+					- for (var i = 0, j = 0; i < averages.length; i++) {
+					- var panelClass="panel-info";
+					if (averages[i].average>=70)
+						- panelClass="panel-success"
+					else if (averages[i].average>=55)
+						- panelClass="panel-warning"
+					else if (averages[i].average>=0)
+						- panelClass="panel-danger"
+					.panel(class=panelClass)
+						a(role="button", data-toggle="collapse", data-parent="#accordionMarks", href="#collapse"+i, aria-expanded=(i==0)?"true":"false", aria-controls="collapse"+i)
+							.panel-heading(role="tab", id="headingCategory"+i)
+								.panel-title
+									span(class='glyphicon glyphicon-plus pad5h', id="glyph"+i)
+									span#resultHeading
+										|#{cats[averages[i].typeID-1].categoryName}
+										if (averages[i].average>=0)
+											| : #{averages[i].average} %
+										else if (averages[i].average ==-2)
+											| : Exempt
+						.panel-collapse.collapse(roll="tabpanel", id="collapse"+i, aria-labelledby="headingCategory"+i)
+							.panel-body
+								.row
+									.col-xs-12
+										ul.list-unstyled
+										- var categoryEntries=0;
+										- for (;j<marks.length && averages[i].typeID==marks[j].typeID;j++, categoryEntries++){
+											li.list-unstyled
+												| #{marks[j].entryName}: 
+												| #{marks[j].mark} / #{marks[j].maxMarks}
+										- }	
+										if !categoryEntries
+											strong 
+												| No entries found
+						
+					- }
+		#chart_container(data-role='content')
