--- a/WebMarks/views/errorDatabase.jade
+++ b/WebMarks/views/errorDatabase.jade
@@ -12,12 +12,11 @@ block content
 	.container
 		.row
 			.col-xs-12
-				div(class='alert alert-info') 
+				.alert.alert-info
 					span
 						|There was a problem accessing the database. Please try later. If the problem persists, contact your course convenor
-			div(data-role="collapsible",data-content-theme="e",align="center")
-				h3 Error info
-				a(class="ui-body ui-body-e", align="center")
-					p #{errorInfo}
-					p Course code: #{urlCourseCode}
-					p Student ID: #{studentID}
+			h3 Error info
+			a(align="center")
+				p #{errorInfo}
+				p Course code: #{urlCourseCode}
+				p Student ID: #{studentID}
