--- a/WebMarks/views/selectCourse.jade
+++ b/WebMarks/views/selectCourse.jade
@@ -40,20 +40,4 @@ block content
 						- for (var i = 0; i < courseInfo.length; i++) {
 						option(value="#{courseInfo[i].coursePrefix}") #{courseInfo[i].courseName}
 						- }
-		.row.pad10v
-			.col-xs-6.col-sm-8
-				input.form-control#textName(type="text",name="textName", placeholder="Student ID" ,onkeydown="if (event.keyCode == 13) viewMarks()")
-			.col-xs-6.col-sm-4
-					button.btn.btn-primary#buttonViewMarks(name="buttonViewMarks", align="center",onClick="viewMarks()")
-						| View Marks
-		.row#errMissingID
-			.col-xs-12
-				.alert.alert-dismissible.alert-danger
-					span
-						|Please choose your course and enter a student ID
-		.row
-			.col-xs-12
-				.alert.alert-default
-					span
-						|Please note: for quick access, you can append your course code (e.g. /1004w) and student ID (e.g. /testid001) to the WebMarks URL
-		
+		include includes/commonInput.jade
