--- a/WebMarks/sass/_variables_site.scss
+++ b/WebMarks/sass/_variables_site.scss
@@ -1,7 +1,6 @@
-﻿$ui-border-radius: 3px;
-
+﻿$navbar-height: 48px;
 $brand-default: lighten($brand-primary, 30);
 $brand-inverse: #23405e;
 $brand-disabled: #bdc3c7;
 $brand-paneltext: white;
-
+$navbar-border-radius: 0px;
