--- a/WebMarks/views/errorGeneric.jade
+++ b/WebMarks/views/errorGeneric.jade
@@ -7,8 +7,8 @@ block content
 		.container
 			.navbar-header
 				.navbar-brand
-					span.fui-document.pad10h
-					| UCT Physics
+					span.glyphicon.glyphicon-list-alt
+					|UCT Physics Webmarks
 	.container
 		.row
 			.col-xs-12
