--- a/WebMarks/views/invalidStudent.jade
+++ b/WebMarks/views/invalidStudent.jade
@@ -7,7 +7,7 @@ block content
 		.container
 			.navbar-header
 				.navbar-brand
-					span.fui-document.pad10h
+					span.glyphicon.glyphicon-list-alt
 					|#{courseName}
 	.container
 		.row
