--- a/WebMarks/views/randomNames.jade
+++ b/WebMarks/views/randomNames.jade
@@ -7,8 +7,8 @@ block content
 		.container
 			.navbar-header
 				.navbar-brand
-					span.fui-document.pad10h
-					|UCT Physics WPS Lottery
+					span.glyphicon.glyphicon-list-alt
+					|WPS Lottery
 	.container
 		div(align="center")
 			p.lead #{headingText}
