--- a/WebMarks/views/selectCourse.jade
+++ b/WebMarks/views/selectCourse.jade
@@ -27,7 +27,8 @@ block content
 			.navbar-header
 				.navbar-brand
 					span.glyphicon.glyphicon-list-alt
-					|UCT Physics Webmarks	
+					|UCT Physics Webmarks
+	.container
 	include includes/bannerImage.jade
 	.container
 		.panel.panel-primary
