--- a/WebMarks/views/layout.jade
+++ b/WebMarks/views/layout.jade
@@ -12,3 +12,8 @@ html
 	body
 		block content
 
+		footer.footer
+			.container
+				p
+					small
+						| Developed for UCT Physics by Angus Comrie
