--- a/WebMarks/views/marks.jade
+++ b/WebMarks/views/marks.jade
@@ -52,7 +52,10 @@ block content
 									- for (;j<marks.length && averages[i].typeID==marks[j].typeID;j++, categoryEntries++){
 										li.list-unstyled
 											| #{marks[j].entryName}: 
-											| #{marks[j].mark} / #{marks[j].maxMarks}
+											if (marks[j].mark>=0)
+												| #{marks[j].mark} / #{marks[j].maxMarks}
+											else if (marks[j].mark ==-2)
+												| : Exempt											
 									- }	
 								if !categoryEntries
 									strong 
