server support for DP status

--- a/WebMarks/views/marks.jade
+++ b/WebMarks/views/marks.jade
@@ -19,7 +19,7 @@ block content
 		.alert.alert-default#studentInfo
 			.row
 				.col-xs-12
-					span #{studentName} (#{studentID})
+					span #{studentName} (#{studentID}) #{dpStatus}
 			.row
 				.col-xs-12
 					span.label.label-primary Updated on #{updateDate}
