--- a/WebMarks/views/marks.jade
+++ b/WebMarks/views/marks.jade
@@ -63,7 +63,7 @@ block content
 											if (marks[j].mark>=0)
 												| #{marks[j].mark} / #{marks[j].maxMarks}
 											else if (marks[j].mark ==-2)
-												| : Exempt											
+												| Exempt											
 									- }	
 								if !categoryEntries
 									strong 
