margin fix for DP status

--- a/WebMarks/views/marks.jade
+++ b/WebMarks/views/marks.jade
@@ -21,7 +21,7 @@ block content
 				.col-xs-12
 					span #{studentName} (#{studentID})
 			- if (dpStatus) {
-				.row
+				.row.bottom10
 					.col-xs-12
 						- var labelClass="label-danger";
 						if (dpStatus=="DP")
