random name styling

--- a/WebMarks/sass/sitestyle.scss
+++ b/WebMarks/sass/sitestyle.scss
@@ -127,6 +127,12 @@ body {
     }
 }
 
+#nameList{
+    li{
+            font-size:150%;
+        }
+}
+
 .bottom5 {margin-bottom: 5px;}
 .bottom7 {margin-bottom: 7px;}
 .bottom10 {margin-bottom: 10px;}
